# ExpiroSavor

./: README.md  pyproject.toml  requirements.txt
instance/: database.sqlite3
static/css/: style.css
templates/: index.html
