[tool.poetry]
name = "repl_nix_ExpiroSavor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-Login = "^0.6.2"
pandas = "^2.0.1"
Werkzeug = "^2.3.4"
Flask = "^2.3.2"
Flask-Bootstrap = "^3.3.7"
Flask-SQLAlchemy = "^3.0.3"
requests = "^2.30.0"
geopy = "^2.3.0"
WTForms = "^3.0.1"
Flask-Session = "^0.5.0"
Flask-WTF = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
